# codegen

./: ToDo.md  UPGRADE-PLAN.md  advanced-codegen-ui-design.md  code-quality-analysis.md  codegen-features.md  codegen-ui-design.md  error-handling-framework.md  interface-contracts-implementation.md  parallel-processing-implementation.md  setup-scheduled-task-fixed.ps1  setup-scheduled-task.ps1  ui-implementation-plan-backend.md  ui-implementation-plan-deployment.md  ui-implementation-plan-frontend.md  ui-implementation-plan-integration.md  ui-implementation-plan-overview.md  windows-wsl2-sync-fixed.ps1  windows-wsl2-sync-readme.md  windows-wsl2-sync.ps1  wsl-codegen-init-combined.ps1  wsl-codegen-init-fixed.ps1  wsl-codegen-init-readme.md  wsl-codegen-init.ps1  wsl-codegen-tools-readme.md
codegen-examples/examples/enhanced-cicd-flow/: .env.template  README.md  app.py  config.py  pyproject.toml  run.py
codegen-examples/examples/enhanced-cicd-flow/components/: __init__.py  code_analyzer.py  integration_hub.py  pr_validator.py  ticket_handler.py
codegen-examples/examples/integrated-cicd-flow/: .env.template  README.md  agents.py  app.py  development_engine.py  event_bus.py  events.py  knowledge_assistant.py  models.py  pyproject.toml  requirements.txt  requirements_hub.py  review_system.py  standalone.py  utils.py
codegen-examples/examples/integrated-cicd-flow/shared/: __init__.py  config.py  event_bus.py  models.py  utils.py
codegen-examples/examples/linear_webhooks/: .env.template  README.md  requirements.txt  standalone.py  webhooks.py
codegen-examples/examples/pr_review_bot/: app.py
codegen-examples/examples/ticket-to-pr/: app.py
src/codegen_ui/: README.md  __init__.py  setup.py
(+36 files in other folders)
