[project]
name = "integrated-cicd-flow"
version = "0.1.0"
description = "Integrated CI/CD flow with Codegen"
authors = [
    {name = "Codegen Team", email = "team@codegen.sh"},
]
dependencies = [
    "codegen>=0.22.2",
    "modal>=0.55.4086",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "openai>=1.1.0",
    "slack-sdk>=3.26.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"